# serializer version: 1
# name: test_SwiftSRGAN_2x
  ImageModelDescriptor(
    architecture='Swift-SRGAN',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '16nb',
    ]),
  )
# ---
# name: test_SwiftSRGAN_4x
  ImageModelDescriptor(
    architecture='Swift-SRGAN',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '16nb',
    ]),
  )
# ---
